add new server into nginx reverse proxy config

--- a/nginx_shibboleth/nginx/k8s_test.conf
+++ b/nginx_shibboleth/nginx/k8s_test.conf
@@ -10,6 +10,7 @@ upstream orc-site {
   server 194.95.75.9:30178; # private node ip
   server 194.95.75.10:30178;
   server 194.95.75.11:30178;
+  server 194.95.75.12:30178;
 }
 
 upstream jhub {
@@ -19,18 +20,21 @@ upstream jhub {
   server 194.95.75.9:30180;
   server 194.95.75.10:30180;
   server 194.95.75.11:30180;
+  server 194.95.75.12:30180;
 }
 
 upstream bhub {
   server 194.95.75.9:30181;
   server 194.95.75.10:30181;
   server 194.95.75.11:30181;
+  server 194.95.75.12:30181;
 }
 
 upstream bjhub {
   server 194.95.75.9:30182;
   server 194.95.75.10:30182;
   server 194.95.75.11:30182;
+  server 194.95.75.12:30182;
 }
 
 # HTTP server to redirect all 80 traffic to SSL/HTTPS
