--- a/jupyterhub/config_test.yaml
+++ b/jupyterhub/config_test.yaml
@@ -133,7 +133,7 @@ singleuser:
     capacity: 15Gi
   image:
     name: gesiscss/singleuser-orc
-    tag: "72d89834"
+    tag: "r2d-fac56633"
   cpu:
     guarantee: 0.1
     limit: 0.5
