--- a/binderhub/config.yaml
+++ b/binderhub/config.yaml
@@ -23,9 +23,6 @@ config:
        && rm -rf orc.tar.gz appendix
       USER $NB_USER
 
-    template_variables:
-      is_staging: False
-      is_production: True
     template_path: /etc/binderhub/templates/binderhub/templates
     #extra_static_path: /etc/binderhub/templates/binderhub/static
     #extra_static_url_prefix: extra_static/
@@ -37,6 +34,33 @@ config:
       # e.g. '^org/repo.*'
       - ^ines/spacy-binder.*
       - ^soft4voip/rak.*
+
+extraConfig:
+  templates: |
+    staging = False
+    production = True
+    site_url = 'https://notebooks{}.gesis.org'.format('-test' if staging else '')
+    context = {
+        'staging': staging,
+        'production': production,
+        'version': 'beta',
+        # 'shibboleth_entityID': f'{site_url}/shibboleth',
+        'home_url': '/',
+        'jhub_url': '/jupyter/',
+        'binder_service_url': '/services/binder/',
+        'gesis_login_url': f'{site_url}/Shibboleth.sso/Login?SAMLDS=1&'
+                           f'target={site_url}/hub/login&'
+                           f'entityID=https%3A%2F%2Fidp.gesis.org%2Fidp%2Fshibboleth',
+        'bhub_url': '/binder/',
+        'about_url': '/about/',
+        'tou_url': '/terms_of_use/',
+        'imprint_url': 'https://www.gesis.org/en/institute/imprint/',
+        'data_protection_url': 'https://www.gesis.org/en/institute/data-protection/',
+        'gesis_url': 'https://www.gesis.org/en/home/',
+        'gallery_url': '/gallery/'
+        # 'help_url': 'https://www.gesis.org/en/help/',
+    }
+    c.BinderHub.template_variables = context
 
 resources:
   requests:
@@ -127,6 +151,8 @@ jupyterhub:
           memory: 512Mi
 
   singleuser:
+    nodeSelector:
+      user: workers
     cpu:
       guarantee: 0.2
       limit: 2
@@ -140,12 +166,9 @@ jupyterhub:
       CULL_TIMEOUT: '900'
       CULL_KERNEL_TIMEOUT: '900'
       CULL_INTERVAL: '60'
-    nodeSelector:
-      user: workers
 
   cull:
     # cull every 16 minutes so it is out of phase
-    # with the proxy check-routes interval of five minutes
     timeout: 900
     every: 960
     # maxAge is 6 hours: 6 * 3600 = 21600
