--- a/jupyterhub/config_test.yaml
+++ b/jupyterhub/config_test.yaml
@@ -10,19 +10,44 @@ hub:
   image:
     name: gesiscss/k8s-hub-orc
     tag: "9696a2f8"
-  # use default deployment strategy (rollingUpdate)
   deploymentStrategy:
     type: RollingUpdate
   db:
     type: postgres
   extraConfig:
-    orc.py: |
+    orc: |
       c.Authenticator.shibboleth_logout_url = 'https://notebooks-test.gesis.org/Shibboleth.sso/Logout?return=https://notebooks-test.gesis.org/'
       c.JupyterHub.redirect_to_server = False
       c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org/jupyter/'
+    templates: |
       c.JupyterHub.template_paths = ['/srv/jhub_custom_templates']
-      c.JupyterHub.template_vars = {'is_staging': True, 'is_production': False}
+      staging = True
+      production = False
+      site_url = 'https://notebooks{}.gesis.org'.format('-test' if staging else '')
+      context = {
+          'staging': staging,
+          'production': production,
+          'version': 'beta',
+          # 'shibboleth_entityID': f'{site_url}/shibboleth',
 
+          'home_url': '/',
+          'jhub_url': '/jupyter/',
+          'binder_service_url': '/services/binder/',
+          # 'logout_url': '/jupyter/hub/logout',
+          'gesis_login_url': f'{site_url}/Shibboleth.sso/Login?SAMLDS=1&'
+                             f'target={site_url}/hub/login&'
+                             f'entityID=https%3A%2F%2Fidp.gesis.org%2Fidp%2Fshibboleth',
+          'bhub_url': '/binder/',
+          'about_url': '/about/',
+          'tou_url': '/terms_of_use/',
+          'imprint_url': 'https://www.gesis.org/en/institute/imprint/',
+          'data_protection_url': 'https://www.gesis.org/en/institute/data-protection/',
+          'gesis_url': 'https://www.gesis.org/en/home/',
+          'gallery_url': '/gallery/'
+          # 'help_url': 'https://www.gesis.org/en/help/',
+      }
+      c.JupyterHub.template_vars = context
+    admin_handler: |
       from jupyterhub.handlers.base import BaseHandler
       from jupyterhub.utils import admin_only
       from jupyterhub import orm
@@ -141,16 +166,15 @@ singleuser:
     guarantee: 512M
     limit: 512M
   extraEnv:
-    IS_STAGING: 'true'
-    IS_PRODUCTION: 'false'
-
-prePuller:
-  hook:
-    enabled: false
-  continuous:
-    enabled: false
-
+    # settings for kernel culling
+    # to be used in binderhub/appendix/extra_notebook_config.py
+    CULL_CONNECTED: '1'
+    CULL_TIMEOUT: '600'
+    CULL_KERNEL_TIMEOUT: '600'
+    CULL_INTERVAL: '60'
 cull:
-  # kill user pods if idle for 10 mins - default is 1 hour
-  timeout: 600
+  # cull every 11 minutes so it is out of phase
   every: 660
+  timeout: 600
+  # maxAge is 6 hours: 6 * 3600 = 21600
+  maxAge: 21600
