--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ build_job:
         docker push gesiscss/nginx-shibboleth-orc:$CI_COMMIT_SHA_8
       fi;
       if git diff HEAD~ --name-only | egrep 'orc_site/'; then
-        if git diff HEAD~ --name-only | egrep --invert-match 'orc_site/deploy/|orc_site/README.md|orc_site/.dockerignore'; then
+        if git diff HEAD~ --name-only | egrep --invert-match 'orc_site/deploy/|orc_site/README.md|orc_site/.dockerignore' | grep 'orc_site/'; then
           echo "####### gesiscss/orc-site:$CI_COMMIT_SHA_8"
           docker login -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
           docker build -t gesiscss/orc-site:$CI_COMMIT_SHA_8 orc_site/.
