--- a/nginx_shibboleth/nginx-shibboleth-app-test.yaml
+++ b/nginx_shibboleth/nginx-shibboleth-app-test.yaml
@@ -67,10 +67,10 @@ spec:
         resources:
           requests:
             cpu: "0.5"
-            memory: "512Mi"
+            memory: "768Mi"
           limits:
-            cpu: "0.5"
-            memory: "512Mi"
+            cpu: "1"
+            memory: "1Gi"
         volumeMounts:
         - name: shibboleth-sp-conf
           mountPath: /etc/shibboleth-conf
