--- a/orc_site/deploy/orc-site-app-test.yaml
+++ b/orc_site/deploy/orc-site-app-test.yaml
@@ -49,7 +49,7 @@ spec:
         resources:
           requests:
             cpu: "0.2"
-            memory: "256Mi"
+            memory: "512Mi"
           limits:
-            cpu: "0.4"
-            memory: "256Mi"
+            cpu: "0.8"
+            memory: "1Gi"
