deploy binderhub-0.2.0-a529251 with jupyter/repo2docker:ff894f44

--- a/binderhub/config.yaml
+++ b/binderhub/config.yaml
@@ -8,7 +8,7 @@ config:
 
     use_registry: true
     image_prefix: gesiscss/orc-binder-
-    build_image: jupyter/repo2docker:36641f3
+    build_image: jupyter/repo2docker:ff894f44
     per_repo_quota: 100
     build_node_selector:
       build: workers
@@ -25,7 +25,7 @@ config:
 
     template_path: /etc/binderhub/templates/binderhub/templates
     #extra_static_path: /etc/binderhub/templates/binderhub/static
-    #extra_static_url_prefix: extra_static/
+    #extra_static_url_prefix: /extra_static/
 
   GitHubRepoProvider:
     # Add banned repositories to the list below
