--- a/binderhub/config_test.yaml
+++ b/binderhub/config_test.yaml
@@ -1,5 +1,50 @@
+service:
+  annotations:
+    prometheus.io/scrape: 'false'
+  type: NodePort
+  nodePort: 30181
+
+# deployment
 nodeSelector:
   staging: worker
+
+resources:
+  requests:
+    cpu: "0.25"
+    memory: 1Gi
+  limits:
+    cpu: "1"
+    memory: 1Gi
+
+# clone custom binder templates into a volume
+initContainers:
+  - name: git-clone-templates
+    image: alpine/git
+    args:
+      - clone
+      - --single-branch
+      - --branch=staging
+      - --depth=1
+      - --
+      - https://github.com/gesiscss/orc.git
+      - /etc/binderhub/custom
+    securityContext:
+      runAsUser: 0
+    volumeMounts:
+      - name: custom-templates
+        mountPath: /etc/binderhub/custom
+extraVolumes:
+  - name: custom-templates
+    emptyDir: {}
+extraVolumeMounts:
+  - name: custom-templates
+    mountPath: /etc/binderhub/custom
+
+dind:
+  enabled: false
+
+imageCleaner:
+  enabled: false
 
 config:
   BinderHub:
@@ -24,9 +69,10 @@ config:
        && rm -rf orc.tar.gz appendix
       USER $NB_USER
 
-    template_path: /etc/binderhub/templates/binderhub/templates
-    #extra_static_path: /etc/binderhub/templates/binderhub/static
+    template_path: /etc/binderhub/custom/binderhub/templates
+    #extra_static_path: /etc/binderhub/custom/binderhub/static
     #extra_static_url_prefix: /extra_static/
+
 extraConfig:
   templates: |
     staging = True
@@ -51,52 +97,8 @@ extraConfig:
         'gallery_url': '/gallery/'
         # 'help_url': 'https://www.gesis.org/en/help/',
     }
-
     context.update({'active': 'binder'})
     c.BinderHub.template_variables = context
-
-resources:
-  requests:
-    cpu: "0.25"
-    memory: 1Gi
-  limits:
-    cpu: "1"
-    memory: 1Gi
-
-service:
-  annotations:
-    prometheus.io/scrape: 'false'
-  type: NodePort
-  nodePort: 30181
-
-dind:
-  enabled: false
-
-imageCleaner:
-  enabled: false
-
-initContainers:
-  - name: git-clone-templates
-    image: alpine/git
-    args:
-      - clone
-      - --single-branch
-      - --branch=staging
-      - --depth=1
-      - --
-      - https://github.com/gesiscss/orc.git
-      - /etc/binderhub/templates
-    securityContext:
-      runAsUser: 0
-    volumeMounts:
-      - name: custom-templates
-        mountPath: /etc/binderhub/templates
-extraVolumes:
-  - name: custom-templates
-    emptyDir: {}
-extraVolumeMounts:
-  - name: custom-templates
-    mountPath: /etc/binderhub/templates
 
 cors: &cors
   allowOrigin: "*"
