--- a/nginx_shibboleth/nginx-shibboleth-app-test.yaml
+++ b/nginx_shibboleth/nginx-shibboleth-app-test.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     app: nginx-shibboleth-test
 spec:
-  type: NodePort
   selector:
     app: nginx-shibboleth-test
   ports:
@@ -13,12 +12,12 @@ spec:
     protocol: TCP
     targetPort: 80
     port: 80
-    nodePort: 30176
   - name: https
     protocol: TCP
     targetPort: 443
     port: 443
-    nodePort: 30177
+  externalIPs:
+    - 194.95.75.10
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -32,11 +31,6 @@ spec:
   selector:
     matchLabels:
       app: nginx-shibboleth-test
-  strategy:
-    # rollingUpdate:
-      # maxSurge: 1
-      # maxUnavailable: 0
-    type: RollingUpdate  # default
   template:
     metadata:
       name: nginx-shibboleth-test
@@ -47,9 +41,12 @@ spec:
         # https://github.com/kubernetes/helm/blob/master/docs/charts_tips_and_tricks.md#automatically-roll-deployments-when-configmaps-or-secrets-change
         # This lets us autorestart when the configmaps/secrets change!
         #checksum/config: {{ include (print "~/ilcm/orc/nginx/k8s_test") . | sha256sum }}
+        # We are now using a trick to restart the hub whenever the hash of the hub's configmap changes. --> do the same for orc apps
+        # https://github.com/jupyterhub/zero-to-jupyterhub-k8s/pull/922
+        # This lets us autorestart when the configmap changes!
+        # checksum/config-map: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        # checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
     spec:
-      restartPolicy: Always  # default
-#      hostNetwork: true
       nodeSelector:
         # assign this pod to staging server
         staging: worker
@@ -59,11 +56,6 @@ spec:
         # https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/#run-a-command-in-a-shell
         command: ["/bin/sh"]
         args: ["-c", "cp /etc/shibboleth-conf/* /etc/shibboleth/ && /usr/bin/supervisord --nodaemon --configuration /etc/supervisor/supervisord.conf"]
-        ports:
-        - containerPort: 80
-          hostPort: 80
-        - containerPort: 443
-          hostPort: 443
         resources:
           requests:
             cpu: "0.5"
