--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -1,3 +1,4 @@
+# this config is mostly based on https://jupyterhub.readthedocs.io/en/stable/reference/config-proxy.html
 # top-level http config for websocket headers
 # If Upgrade is defined, Connection = upgrade
 # If Upgrade is empty, Connection = close
@@ -6,7 +7,15 @@ map $http_upgrade $connection_upgrade {
     ''      close;
 }
 
+# https://kubernetes.io/docs/concepts/services-networking/service/#nodeport
+# If you set the type field to NodePort, the Kubernetes master will allocate a port from a range specified by
+# --service-node-port-range flag (default: 30000-32767),
+# and each Node will proxy that port (the same port number on every Node) into your Service.
+# => That's why we add all nodes into upstream
 upstream orc-site {
+  # http://nginx.org/en/docs/http/load_balancing.html
+  # least_conn;
+  # server 194.95.75.9:30080 weight=3;
   server 194.95.75.9:30078; # private node ip
   server 194.95.75.10:30078;
   server 194.95.75.11:30078;
@@ -15,10 +24,16 @@ upstream orc-site {
 
 upstream grafana {
   server 194.95.75.9:30075;
+  server 194.95.75.10:30075;
+  server 194.95.75.11:30075;
+  server 194.95.75.12:30075;
 }
 
 upstream prometheus {
   server 194.95.75.9:30073;
+  server 194.95.75.10:30073;
+  server 194.95.75.11:30073;
+  server 194.95.75.12:30073;
 }
 
 upstream jhub {
@@ -47,8 +62,8 @@ server {
     listen 80;
     server_name notebooks.gesis.org 194.95.75.9;
     access_log off;  # turn off access log
-    # Tell all requests to port 80 to be 302 redirected to HTTPS
-    return 302 https://$host$request_uri;
+    # Tell all requests to port 80 to be 301 (permanently) redirected to HTTPS
+    return 301 https://$host$request_uri;
 }
 
 # HTTPS server
@@ -60,14 +75,17 @@ server {
 
     ssl_certificate /etc/letsencrypt_volume/live/notebooks.gesis.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt_volume/live/notebooks.gesis.org/privkey.pem;
-    # https://www.nginx.com/resources/admin-guide/nginx-ssl-termination/#optimize
-    # include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_session_cache shared:le_nginx_SSL:50m;  # 50mb shared session cache
-    ssl_session_timeout 1440m;
+
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers "ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS";
     ssl_dhparam /etc/letsencrypt_volume/dhparam.pem;
+    ssl_ciphers "ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS";
+    # https://docs.nginx.com/nginx/admin-guide/security-controls/terminating-ssl-http/#https-server-optimization
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;  # 50mb shared session cache
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    add_header Strict-Transport-Security max-age=15768000;
 
     # optimization
     access_log off;  # turn off access log
@@ -123,6 +141,8 @@ server {
 
     # Managing literal requests to the BinderHub
     location /binder/ {
+        # http://www.tornadoweb.org/en/stable/guide/running.html#running-behind-a-load-balancer
+        # https://serverfault.com/questions/263022/http-streaming-server-behind-nginx
         proxy_buffering off;
         proxy_pass http://bhub;
         proxy_set_header X-Real-IP $remote_addr;
