comment: ignore jhub and bhub fonts in nginx config

--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -205,4 +205,14 @@ server {
         fastcgi_buffers 256 4k;
         fastcgi_pass unix:/var/run/shibboleth/shibresponder.sock;
     }
+
+    ## ignore fonts of JupyterHub and BinderHub (they not found anyway when base url is different than /)
+    #location ~* ^/jupyter/hub/static/fonts/.+\.(woff|woff2|ttf)$
+    #{
+    #    return 404;
+    #}
+    #location ~* ^/static/dist/.+\.(woff|woff2|ttf)$
+    #{
+    #    return 404;
+    #}
 }
