jhub: secure cookies

--- a/jupyterhub/config_test.yaml
+++ b/jupyterhub/config_test.yaml
@@ -20,6 +20,10 @@ hub:
       c.Authenticator.shibboleth_logout_url = 'https://notebooks-test.gesis.org/Shibboleth.sso/Logout?return=https://notebooks-test.gesis.org/'
       c.JupyterHub.redirect_to_server = False
       c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org/jupyter/'
+      if "cookie_options" in c.JupyterHub.tornado_settings:
+        c.JupyterHub.tornado_settings["cookie_options"].update({"secure": True})
+      else:
+        c.JupyterHub.tornado_settings["cookie_options"] = dict(secure=True)
     templates: |
       c.JupyterHub.template_paths = ['/srv/jhub_custom_templates']
       staging = True
