--- a/jupyterhub/config.yaml
+++ b/jupyterhub/config.yaml
@@ -18,6 +18,10 @@ hub:
       c.Authenticator.shibboleth_logout_url = 'https://notebooks.gesis.org/Shibboleth.sso/Logout?return=https://notebooks.gesis.org/'
       c.JupyterHub.redirect_to_server = False
       c.JupyterHub.bind_url = 'https://notebooks.gesis.org/jupyter/'
+      if "cookie_options" in c.JupyterHub.tornado_settings:
+        c.JupyterHub.tornado_settings["cookie_options"].update({"secure": True})
+      else:
+        c.JupyterHub.tornado_settings["cookie_options"] = dict(secure=True)
     templates: |
       c.JupyterHub.template_paths = ['/srv/jhub_custom_templates']
       staging = False
