--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -45,10 +45,19 @@ upstream bjhub {
   server 194.95.75.10:30082;
 }
 
-# HTTP server to redirect all 80 traffic to SSL/HTTPS
+server {
+    listen 80 default_server;
+    listen 443 ssl default_server;
+    server_name _;
+    ssl_certificate /etc/letsencrypt_volume/live/notebooks.gesis.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt_volume/live/notebooks.gesis.org/privkey.pem;
+    return 404;
+}
+
+# HTTP server to redirect notebooks.gesis.org 80 traffic to SSL/HTTPS
 server {
     listen 80;
-    server_name notebooks.gesis.org 194.95.75.9;
+    server_name notebooks.gesis.org;
     access_log off;  # turn off access log
     # Tell all requests to port 80 to be 301 (permanently) redirected to HTTPS
     return 301 https://$host$request_uri;
@@ -59,7 +68,7 @@ server {
     listen 443;
     ssl on;
 
-    server_name notebooks.gesis.org 194.95.75.9;
+    server_name notebooks.gesis.org;
 
     ssl_certificate /etc/letsencrypt_volume/live/notebooks.gesis.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt_volume/live/notebooks.gesis.org/privkey.pem;
