use webroot plugin

--- a/nginx_shibboleth/nginx-shibboleth-app-test.yaml
+++ b/nginx_shibboleth/nginx-shibboleth-app-test.yaml
@@ -74,6 +74,9 @@ spec:
         - name: letsencrypt-volume
           mountPath: "/etc/letsencrypt_volume"
           readOnly: true
+        - name: webroot-volume
+          mountPath: "/var/www/html"
+          readOnly: true
       volumes:
       - name: shibboleth-sp-conf
         configMap:
@@ -87,3 +90,6 @@ spec:
       - name: letsencrypt-volume
         hostPath:
           path: /etc/letsencrypt
+      - name: webroot-volume
+        hostPath:
+          path: /var/www/html
