--- a/nginx_shibboleth/nginx-shibboleth-app.yaml
+++ b/nginx_shibboleth/nginx-shibboleth-app.yaml
@@ -65,6 +65,9 @@ spec:
         - name: letsencrypt-volume
           mountPath: "/etc/letsencrypt_volume"
           readOnly: true
+        - name: webroot-volume
+          mountPath: "/var/www/html"
+          readOnly: true
       volumes:
       - name: shibboleth-sp-conf
         configMap:
@@ -78,3 +81,6 @@ spec:
       - name: letsencrypt-volume
         hostPath:
           path: /etc/letsencrypt
+      - name: webroot-volume
+        hostPath:
+          path: /var/www/html
