--- a/nginx_shibboleth/nginx/k8s_test.conf
+++ b/nginx_shibboleth/nginx/k8s_test.conf
@@ -78,6 +78,14 @@ server {
 
     location = /favicon.ico { access_log off; log_not_found off; }
 
+    # for webroot plugin - https://certbot.eff.org/docs/using.html#webroot
+	location ^~ /.well-known/acme-challenge {
+        root /var/www/html;
+	}
+	location = /.well-known/acme-challenge/ {
+		return 404;
+	}
+
     # Managing literal requests to orc site app
     location / {
         proxy_pass http://orc-site;
