--- a/jupyterhub/docker/k8s_hub/Dockerfile
+++ b/jupyterhub/docker/k8s_hub/Dockerfile
@@ -1,6 +1,5 @@
-# https://github.com/gesiscss/jhub_shibboleth_auth/tree/39457f1838dc6af9a36fcd95d95a2cffef952430/docker/k8s_hub
-FROM gesiscss/k8s-hub:80a76ac-v1.4.0
-
+# https://github.com/gesiscss/jhub_shibboleth_auth/tree/4c1eee2dab273ae960e46de016855e5a9deedace/docker/k8s_hub
+FROM gesiscss/k8s-hub:0.8.2-v1.5.0
 
 USER root
 COPY templates /srv/jhub_custom_templates
