--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -33,6 +33,12 @@ upstream prometheus {
   server 194.95.75.11:30073;
 }
 
+upstream kibana {
+  server 194.95.75.9:30070;
+  server 194.95.75.10:30070;
+  server 194.95.75.11:30070;
+}
+
 upstream jhub {
   server 194.95.75.9:30080;
   server 194.95.75.10:30080;
@@ -148,6 +154,20 @@ server {
         sub_filter 'var PATH_PREFIX = "";' 'var PATH_PREFIX = "/prometheus";';
         rewrite ^/prometheus/?$ /prometheus/graph redirect;
         rewrite ^/prometheus/(.*)$ /$1 break;
+    }
+
+    # Kibana
+    # https://discuss.elastic.co/t/kibana-and-nginx-in-subpath/90280/5
+    location /kibana/ {
+        auth_basic           “Administrator’s Area”;
+        auth_basic_user_file /etc/letsencrypt_volume/.kibana_htpasswd;
+
+        proxy_pass http://kibana/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
     # Managing literal requests to the BinderHub
