--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -159,7 +159,7 @@ server {
     # Kibana
     # https://discuss.elastic.co/t/kibana-and-nginx-in-subpath/90280/5
     location /kibana/ {
-        auth_basic           “Administrator’s Area”;
+        auth_basic "Administrator’s Area";
         auth_basic_user_file /etc/letsencrypt_volume/.kibana_htpasswd;
 
         proxy_pass http://kibana/;
