--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -162,7 +162,7 @@ server {
         auth_basic "Administrator’s Area";
         auth_basic_user_file /etc/letsencrypt_volume/.kibana_htpasswd;
 
-        proxy_pass http://kibana/;
+        proxy_pass http://kibana;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
