--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -162,6 +162,8 @@ server {
         auth_basic "Administrator's Area";
         auth_basic_user_file /etc/letsencrypt_volume/.kibana_htpasswd;
 
+        # without trailing slash means nginx passes subpath (/kibana/...) to kibana
+        # and kibana will rewrite it
         proxy_pass http://kibana;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
