--- a/orc_site/deploy/orc-site-app.yaml
+++ b/orc_site/deploy/orc-site-app.yaml
@@ -26,30 +26,29 @@ spec:
   selector:
     matchLabels:
       app: orc-site
-  strategy:
-    type: RollingUpdate  # default
   template:
     metadata:
       name: orc-site
       labels:
         app: orc-site
     spec:
-      restartPolicy: Always  # default
-      nodeSelector:
-        production: worker
       containers:
       - name: orc-site
-        image: gesiscss/orc-site:52538ffd
+        image: gesiscss/orc-site:
+        command: ["gunicorn"]
+        args: ["-b", "0.0.0.0:5000", "-w", "12", "binder_gallery.app:app"]
         ports:
         - containerPort: 5000
           protocol: TCP
         env:
-        - name: DEPLOYMENT_ENV
+        - name: FLASK_ENV
           value:  "production"
+        - name: FLASK_SERVER_NAME
+          value:  "0.0.0.0:5000"
         resources:
           requests:
             cpu: "0.25"
             memory: "256Mi"
           limits:
-            cpu: "1"
+            cpu: "4"
             memory: "1Gi"
