run orc-site behind gunicorn with new image

--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -114,11 +114,15 @@ server {
 	}
 
     # Managing literal requests to orc site app
+    # http://flask.pocoo.org/docs/1.0/deploying/wsgi-standalone/#proxy-setups
     location / {
         proxy_pass http://orc-site;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect     off;
+
+        proxy_set_header   Host                 $host;
+        proxy_set_header   X-Real-IP            $remote_addr;
+        proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto    $scheme;
     }
     location /login {
         # remove entityID and return parameters in url, they are supplied in idpselect_config.js
@@ -126,9 +130,12 @@ server {
         if ($query_string ~ "^(.*)return=(.*)$") {rewrite ^(.*)$ $uri? permanent;}
 
         proxy_pass http://orc-site;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect     off;
+
+        proxy_set_header   Host                 $host;
+        proxy_set_header   X-Real-IP            $remote_addr;
+        proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto    $scheme;
     }
 
     # Grafana UI
