run orc-site behind gunicorn with new image and update nginx config

--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -21,6 +21,12 @@ upstream orc-site {
   server 194.95.75.12:30078;
 }
 
+upstream gallery {
+  server 194.95.75.9:30079;
+  server 194.95.75.10:30079;
+  server 194.95.75.12:30079;
+}
+
 upstream grafana {
   server 194.95.75.9:30075;
   server 194.95.75.10:30075;
@@ -130,6 +136,16 @@ server {
         if ($query_string ~ "^(.*)return=(.*)$") {rewrite ^(.*)$ $uri? permanent;}
 
         proxy_pass http://orc-site;
+        proxy_redirect     off;
+
+        proxy_set_header   Host                 $host;
+        proxy_set_header   X-Real-IP            $remote_addr;
+        proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto    $scheme;
+    }
+    # binder gallery
+    location /gallery/ {
+        proxy_pass http://gallery;
         proxy_redirect     off;
 
         proxy_set_header   Host                 $host;
