--- a/nginx_shibboleth/nginx/k8s_test.conf
+++ b/nginx_shibboleth/nginx/k8s_test.conf
@@ -12,6 +12,12 @@ upstream orc-site {
   server 194.95.75.12:30178;
 }
 
+upstream gallery {
+  server 194.95.75.9:30179;
+  server 194.95.75.10:30179;
+  server 194.95.75.12:30179;
+}
+
 upstream jhub {
   server 194.95.75.9:30180;
   server 194.95.75.10:30180;
@@ -105,6 +111,16 @@ server {
         #auth_basic_user_file /etc/nginx/.htpasswd/.htpasswd_test;
 
         proxy_pass http://orc-site;
+        proxy_redirect     off;
+
+        proxy_set_header   Host                 $host;
+        proxy_set_header   X-Real-IP            $remote_addr;
+        proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto    $scheme;
+    }
+    # binder gallery
+    location /gallery/ {
+        proxy_pass http://gallery;
         proxy_redirect     off;
 
         proxy_set_header   Host                 $host;
